--- a/src/containers/about/styles.scss
+++ b/src/containers/about/styles.scss
@@ -41,6 +41,8 @@
 
       ul {
         list-style: none;
+        padding-bottom: 20px;
+        border-bottom: 1px dashed var(--yellow-theme-main-color);
         li {
           line-height: 1rem;
           margin-bottom: 15px;
@@ -59,6 +61,36 @@
           }
           span.value {
             border: none;
+          }
+        }
+      }
+      .social__content {
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        justify-content: center;
+        .social {
+          list-style: none;
+          padding: 0;
+          border: none;
+          display: flex;
+          align-items: center;
+          justify-content: left;
+          gap: 20px;
+
+          li {
+            svg {
+              color: var(--yellow-theme-sub-text-color);
+              background: transparent;
+
+              transition: all 0.3s ease;
+            }
+
+            &:hover {
+              svg {
+                color: var(--yellow-theme-main-color);
+              }
+            }
           }
         }
       }
@@ -138,6 +170,9 @@
     &__personalWrapper,
     &__servicesWrapper {
       width: 100%;
+    }
+    .social__content {
+      align-items: center;
     }
     &__servicesWrapper {
       margin: 10px 0;
