--- a/src/containers/home/styles.scss
+++ b/src/containers/home/styles.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   &__text-wrapper {
     display: flex;
     flex-direction: column;
@@ -12,7 +13,8 @@
     align-items: center;
     margin-bottom: 2rem;
 
-    h1 {
+    h1,
+    h2 {
       color: var(--yellow-theme-main-color);
       margin: 0;
       font-weight: 500;
@@ -21,6 +23,8 @@
       position: relative;
       overflow: hidden;
       white-space: nowrap;
+    }
+    h2 {
       animation: typingEffectAnimation 2.5s steps(30, end);
     }
   }
