--- a/src/containers/home/styles.scss
+++ b/src/containers/home/styles.scss
@@ -57,7 +57,8 @@
 }
 
 @media only screen and (max-width: 550px) {
-  .home__text-wrapper h1 {
+  .home__text-wrapper h1,
+  .home__text-wrapper h2 {
     font-size: 3rem;
     line-height: 5rem;
   }
@@ -70,7 +71,8 @@
   }
 }
 @media only screen and (min-width: 551px) and (max-width: 768px) {
-  .home__text-wrapper h1 {
+  .home__text-wrapper h1,
+  .home__text-wrapper h2 {
     font-size: 4rem;
     line-height: 6rem;
   }
@@ -82,7 +84,8 @@
   }
 }
 @media only screen and (min-width: 769px) and (max-width: 990px) {
-  .home__text-wrapper h1 {
+  .home__text-wrapper h1,
+  .home__text-wrapper h2 {
     font-size: 6rem;
     line-height: 8rem;
   }
