--- a/src/containers/contact/styles.scss
+++ b/src/containers/contact/styles.scss
@@ -55,6 +55,17 @@
             position: relative;
             background-color: transparent;
             color: var(--yellow-theme-sub-text-color);
+
+            &.invalid {
+              border: 2px solid red;
+            }
+          }
+
+          .error {
+            font-size: 12px;
+            color: var(--yellow-theme-sub-text-color);
+            position: absolute;
+            bottom: -20px;
           }
 
           label {
